[package]
name = "rust-sketchup-test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.142"
rand = "0.8.5"
mesh-generation = "0.1.3"
perlin2d = "0.2.6"
polyhedron-ops = "0.2.7"
rapier3d = { version = "0.17.2", features = [ "simd-stable", "parallel" ] }
mizu-core = "1.0.0"
